<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/register_tv_account_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/register_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/register_et_email"
        android:layout_width="@dimen/general_input_width"
        android:layout_height="@dimen/general_input_height"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/general_textfield_background"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/general_sides_padding"
        android:paddingTop="@dimen/general_top_bottom_padding"
        android:paddingEnd="@dimen/general_sides_padding"
        android:paddingBottom="@dimen/general_top_bottom_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_tv_account_data" />


    <EditText
        android:id="@+id/register_et_password"
        android:layout_width="@dimen/general_input_width"
        android:layout_height="@dimen/general_input_height"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/general_textfield_background"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/general_sides_padding"
        android:paddingTop="@dimen/general_top_bottom_padding"
        android:paddingEnd="@dimen/general_sides_padding"
        android:paddingBottom="@dimen/general_top_bottom_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_et_email" />

    <EditText
        android:id="@+id/register_et_password_confirm"
        android:layout_width="@dimen/general_input_width"
        android:layout_height="@dimen/general_input_height"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/general_textfield_background"
        android:ems="10"
        android:hint="@string/hint_re_password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/general_sides_padding"
        android:paddingTop="@dimen/general_top_bottom_padding"
        android:paddingEnd="@dimen/general_sides_padding"
        android:paddingBottom="@dimen/general_top_bottom_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_et_password" />


    <LinearLayout
        android:id="@+id/register_ll_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_et_password_confirm" />


    <TextView
        android:id="@+id/register_tv_personal_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/register_personal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_ll_separator" />

    <EditText
        android:id="@+id/register_et_name"
        android:layout_width="@dimen/general_input_width"
        android:layout_height="@dimen/general_input_height"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/general_textfield_background"
        android:ems="10"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        android:paddingStart="@dimen/general_sides_padding"
        android:paddingTop="@dimen/general_top_bottom_padding"
        android:paddingEnd="@dimen/general_sides_padding"
        android:paddingBottom="@dimen/general_top_bottom_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_tv_personal_data" />

    <EditText
        android:id="@+id/register_et_surname"
        android:layout_width="@dimen/general_input_width"
        android:layout_height="@dimen/general_input_height"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/general_textfield_background"
        android:ems="10"
        android:hint="@string/hint_surname"
        android:inputType="textPersonName"
        android:paddingStart="@dimen/general_sides_padding"
        android:paddingTop="@dimen/general_top_bottom_padding"
        android:paddingEnd="@dimen/general_sides_padding"
        android:paddingBottom="@dimen/general_top_bottom_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_et_name" />

    <Button
        android:id="@+id/register_bt_signup"
        android:layout_width="@dimen/general_input_width"
        android:layout_height="@dimen/general_input_height"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_button"
        android:text="@string/register_register"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_et_surname" />

</android.support.constraint.ConstraintLayout>