<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/profile_iv"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/profile_tv_email"
        android:layout_marginStart="20dp"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/profile_tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/profile_iv"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/white"
        android:textSize="17dp" />


    <EditText
        android:id="@+id/profile_et_username"
        android:layout_width="@dimen/general_input_width"
        android:layout_height="@dimen/general_input_height"
        android:layout_below="@+id/profile_iv"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/general_textfield_background"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/hint_username"
        android:inputType="text"
        android:paddingStart="@dimen/general_sides_padding"
        android:paddingTop="@dimen/general_top_bottom_padding"
        android:paddingEnd="@dimen/general_sides_padding"
        android:paddingBottom="@dimen/general_top_bottom_padding" />


    <EditText
        android:id="@+id/profile_et_name"
        android:layout_width="@dimen/general_input_width"
        android:layout_height="@dimen/general_input_height"
        android:layout_below="@+id/profile_et_username"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/general_textfield_background"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/hint_name"
        android:inputType="text"
        android:paddingStart="@dimen/general_sides_padding"
        android:paddingTop="@dimen/general_top_bottom_padding"
        android:paddingEnd="@dimen/general_sides_padding"
        android:paddingBottom="@dimen/general_top_bottom_padding" />

    <EditText
        android:id="@+id/profile_et_surname"
        android:layout_width="@dimen/general_input_width"
        android:layout_height="@dimen/general_input_height"
        android:layout_below="@+id/profile_et_name"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/general_textfield_background"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/hint_surname"
        android:inputType="text"
        android:paddingStart="@dimen/general_sides_padding"
        android:paddingTop="@dimen/general_top_bottom_padding"
        android:paddingEnd="@dimen/general_sides_padding"
        android:paddingBottom="@dimen/general_top_bottom_padding" />


    <LinearLayout
        android:layout_width="@dimen/general_input_width"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <TextView
                android:id="@+id/profile_tv_last_login_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/profile_logged" />

            <TextView
                android:id="@+id/profile_tv_last_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/profile_unknown" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>